# GenAI

./: .gitignore  RagImplementation_ResearchPaper.ipynb  Tokens_And_Embeddings  dataparsingdoc.ipynb  pyproject.toml  requirements.txt
AgenticAI/: pyproject.toml
Data_Ingestion_Parsing/: dataingestion.ipynb  dataparsingpdf.ipynb
Data_Ingestion_Parsing/data/text_files/: AI & Automation Data Scientist.docx  python_intro.txt
FAISS/: faiss.ipynb
FAISS/faiss_index/: index.faiss  index.pkl
FastAPI/: myapi.py  text_doc
MultiModelLLM/: multimodel.ipynb
VectorDatabase/: pinecorn.ipynb
VectorEmbeddings_Database/: Embeddings.ipynb  Visualization.ipynb
Vector_Stores/: chromadb.ipynb
Vector_Stores/chroma_db/: chroma.sqlite3
