[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "chromadb>=1.3.4",
    "docx2txt>=0.9",
    "faiss-cpu>=1.12.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-groq>=0.3.8",
    "langchain-text-splitters>=0.3.11",
    "matplotlib>=3.9.4",
    "pandas>=2.3.3",
    "pymupdf>=1.26.5",
    "pypdf>=6.1.3",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.1.2",
    "tiktoken>=0.12.0",
    "unstructured[docx]>=0.18.3",
]
